# Snake-Game-Using-C

./: CMakeLists.txt  LICENSE  README.md  VSCODE_SETUP.md
cmake/: FindSDL2_mixer.cmake
src/: audio.cpp  audio.h  controller.cpp  controller.h  game.cpp  game.h  main.cpp  particle.cpp  particle.h  renderer.cpp  renderer.h  snake.h
